fix table columns collapsing

--- a/waikup/static/css/waikup.css
+++ b/waikup/static/css/waikup.css
@@ -16,3 +16,9 @@ body {
 .underline {
     text-decoration: underline;
 }
+table#links-list>tbody>tr>td#collapsible-td {
+    padding: 0px;
+}
+table#links-list>tbody>tr>td {
+    border: 0;
+}
